[package]
name = "get-git"
version = "0.1.1"
authors = ["Igna <saltyfish2233@gmail.com>"]
description = "Get subdirectory of github repo by using `git clone --filter` and `git sparse-checkout`"
categories = ["command-line-utilities", "accessibility"]
repository = "https://github.com/Sssssaltyfish/get-git"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
http = "1.0.0"
itertools = "0.12.0"
tempdir = "0.3.7"
walkdir = "2.4.0"